WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
96615
Web Inspector: CSS domain sends events while it is not enabled
https://bugs.webkit.org/show_bug.cgi?id=96615
Summary
Web Inspector: CSS domain sends events while it is not enabled
Yury Semikhatsky
Reported
2012-09-13 00:48:02 PDT
Now we can get {"method":"CSS.mediaQueryResultChanged"} right after connecting front-end. The domain should keep silence unless it is explicitly enabled.
Attachments
Patch
(3.55 KB, patch)
2012-09-13 01:22 PDT
,
Alexander Pavlov (apavlov)
yurys
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexander Pavlov (apavlov)
Comment 1
2012-09-13 01:22:06 PDT
Created
attachment 163812
[details]
Patch
Alexander Pavlov (apavlov)
Comment 2
2012-09-13 01:41:10 PDT
Committed
r128427
: <
http://trac.webkit.org/changeset/128427
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug