Web Inspector: CSS domain sends events while it is not enabled https://bugs.webkit.org/show_bug.cgi?id=96615

Reviewed by Yury Semikhatsky.

The CSS agent is put into and removed from the instrumenting agents set upon enable() and disable(), respectively.

Tests will be shortly landed as a part of the new pure protocol testing harness.

* inspector/InspectorCSSAgent.cpp:
(WebCore::InspectorCSSAgent::setFrontend):
(WebCore::InspectorCSSAgent::clearFrontend):
(WebCore::InspectorCSSAgent::reset):
(WebCore):
(WebCore::InspectorCSSAgent::resetNonPersistentData):
(WebCore::InspectorCSSAgent::enable):
(WebCore::InspectorCSSAgent::disable):
* inspector/InspectorCSSAgent.h:
(InspectorCSSAgent):

Canonical link: https://commits.webkit.org/114513@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@128427 268f45cc-cd09-0410-ab3c-d52691b4dbfc